tests/reference/asr_preprocess-cpp6-556419a.stderr
tests/errors/cpp6.f90:3:1 semantic error: Variable 'z12' not declared
#include "cpp6.h"
^~~~~~~~~~~~~~~~~
